## ExampleLib Example: an example of using Automake to link with a library

AC_INIT([ed25519], [1.0], [bernd@net2o.de], [ed25519 for Linux],
        [http://ed25519.cr.yp.to/index.html])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC
AM_PROG_AS
AM_PROG_AR
LT_INIT

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
